# xiNAS

./: .ansible-lint  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .spectral.yaml  .yamllint.yml  CLAUDE.md  README.md  ansible.cfg  autoinstall.sh  client_setup.sh  collect_data.sh  configure_hostname.sh  configure_network.sh  configure_nfs_exports.sh  configure_raid.sh  healthcheck.sh  install.MD  install.sh  install_client.sh  logo  post_install_menu.sh  prepare_system.sh  pyproject.toml  simple_menu.sh  startup_menu.sh  uninstall.sh
.github/workflows/: ci.yml  test-designer.yml
Installer/: fs-exports-spec.md  network-spec.md  raid-spec.md  spec.md
Storage/: fs-shares-management-spec.md  raid-management-spec.md
client_repo/: README.md  client_healthcheck.sh  client_setup.sh
client_repo/client_health_profiles/: ai-training.yml  checkpoint-heavy.yml  default.yml  hpc-readmostly.yml
client_repo/lib/: gds_state.sh  menu_lib.sh  op_status.sh
client_repo/patches/: README.md  apply-mlnx-nfsrdma-export-gpl.sh  mlnx-nfsrdma-nvfs-export-gpl.patch
client_repo/xinas_client/: __init__.py  __main__.py  app.py  styles.tcss  version.py
collection/callback_plugins/: xinas_install_state.py
docs/HealthCheck/: pcie-link-check.md
docs/Installer/: feedback-fixes-runbook.md  fs-exports-spec.md  network-spec.md  raid-spec.md  spec.md  uninstall-spec.md  xinas-api-role-spec.md
docs/MCP/: modules.md  spec-config-history.md  spec-core.md  spec-middleware.md  spec-nfs-helper.md  spec-os.md
docs/Network/: spec-network-management.md
docs/Storage/: fs-shares-management-spec.md  raid-management-spec.md
docs/config-history/: architecture.md  grpc-api-reference.md  requirements.md  specs.md
docs/control-path/: api-v1.yaml  ci-bootstrap-design.md  dev-setup.md  hardware-smoke-runbook.md  phase0-requirements.md  phase0-sequencing.md  s0s1-deferred-and-next.md  s11-targeted-rollback-spec.md  s12-durable-adoption-spec.md  s2-task-envelope-spec.md  s3-nfs-executor-spec.md  s3-xiraid-array-spec.md  s4-xiraid-array-mutations-spec.md  s5-filesystem-spec.md  s6-network-spec.md  s7-health-drift-spec.md  s8-clients-spec.md  s9-bridge-pools-spec.md  xinas-agent-s0s1-spec.md
docs/healthcheck-tunables/: filesystem-params.md  linux-perf.md  sysctl-tunings.md
docs/plans/: 2026-02-28-test-designer-implementation.md  2026-02-28-test-designer-skill-design.md  2026-03-12-ip-pool-network-design.md  2026-03-12-ip-pool-network-plan.md  2026-03-12-mcp-http-menu-design.md  2026-03-12-mcp-http-menu-plan.md  2026-03-13-grpc-aio-migration-design.md  2026-03-13-raid-crud-design.md  (+41 more)
group_vars/: all.yml
healthcheck_profiles/: deep.yml  quick.yml  standard.yml
lib/: menu_lib.sh  op_status.sh
playbooks/: site.yml  uninstall.yml
scripts/: package-lock.json  package.json  test-design-doca-ofed-network.xml  test-design-share-create.json  test-design-share-create.xml  tq-publish.mjs
specs/: spec-email-notifications.md
tests/: conftest.py  test_config_history_restore.py  test_control_client.py  test_execute_restore_snapshot.py  test_history_cli_entrypoint.py  test_install_state_callback.py  test_ip_pool_screen.py  test_perf_runtime_unit.py  test_playbook_ticker_callback.py  test_preset_playbooks.py  test_render_nfs_profile.py  test_sanity.py  test_set_idmapd_domain.py  test_snapshot_adopt.py  test_snapshot_create_json.py  test_snapshot_files_changed.py  test_snapshot_list_restorable.py  test_snapshot_restore_cli.py  test_system_files_payload.py
xiNAS-MCP/: .eslintrc.json  .gitignore  REQUIREMENTS.md  biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts  xinas-agent.service  xinas-api.service  xinas-mcp.service
xinas_history/: __init__.py  __main__.py  classifier.py  collector.py  drift.py  engine.py  gc.py  grpc_inspector.py  lock.py  models.py  runner.py  store.py  validator.py
xinas_menu/: __init__.py  __main__.py  app.py  apptype.py  clipboard.py  styles.tcss  version.py
(+727 files in other folders)
