[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xinas-menu"
description = "xiNAS management TUI and health engine"
requires-python = ">=3.10"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "xinas_menu.version.XINAS_MENU_VERSION"}

[tool.setuptools.packages.find]
include = ["xinas_menu*"]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.380",
  "ruff>=0.6.0",
  "pytest>=8.0",
  # TUI runtime deps, mirrored from collection/roles/xinas_menu/tasks/main.yml
  # (the deployment venv) so pyright resolves imports in CI. Keep the version
  # floors in sync with the role.
  "textual>=0.71.0",
  "rich",            # imported directly (rich.text, rich.markup); textual dep
  "grpcio>=1.60.0",
  "pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".claude", "node_modules", "xiNAS-MCP/node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# E501: line WRAPPING is enforced by `ruff format` (a separate blocking CI job);
# E501 at >100 cols remains only in long strings/comments where rewrapping is
# churn without value.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Deliberate TUI pattern: `_log = logging.getLogger(__name__)` sits between the
# stdlib imports and the heavyweight textual/widget imports, so everything after
# it trips E402. Keeping the pattern; scoped to the files that use it.
"xinas_menu/app.py" = ["E402"]
"xinas_menu/screens/network.py" = ["E402"]
"xinas_menu/screens/nfs.py" = ["E402"]
"xinas_menu/screens/raid.py" = ["E402"]
"xinas_menu/screens/spare_pools.py" = ["E402"]
"xinas_menu/screens/welcome.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["xinas_menu", "xinas_history", "xiNAS-MCP/nfs-helper"]
exclude = ["**/__pycache__", "**/.git", "**/node_modules", "**/.venv"]
reportMissingTypeStubs = "none"
# textual's screen/mount APIs (push_screen, mount, recompose, ...) return
# optionally-awaitable objects; the fire-and-forget call is the framework's
# documented idiom, so an unawaited result is not a bug in this codebase.
# Warning keeps the signal visible without failing CI.
reportUnusedCoroutine = "warning"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
